# app/routes/routes.js
@@ -19,14 +19,11 @@ const routes = {
       export: "/v1/schedule/export",
     },
     adminSchedule: {
-      access: "admin/v1/schedule/getAcess",
-      redirect: "/admin/v1/schedule/reDirect",
-      list: "/admin/v1/schedule/list",
-      create: "/admin/v1/schedule/create",
-      get: "/admin/v1/schedule/get",
-      update: "/admin/v1/schedule/update",
-      delete: "/admin/v1/schedule/delete",
-      export: "/admin/v1/schedule/export",
+      list: "/v1/admin/schedule/list",
+      create: "/v1/admin/schedule/create",
+      get: "/v1/admin/schedule/get",
+      update: "/v1/admin/schedule/update",
+      delete: "/v1/admin/schedule/delete",
     },
     notificationManagement: {
       list: "/v1/notification-management/list",
